--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <link href="../dist/output.css" rel="stylesheet">
-
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <style>
     @keyframes gradientAnimation {
@@ -40,35 +40,30 @@
 <body>
 
     <div
-        class="main-container relative bg-whitesmoke-100 box-border w-full h-[4045px] overflow-hidden text-left text-xl text-gray-200 font-poppins border-[1px] border-solid border-gray-1300">
-        <header class="bg-gainsboro-200 w-full h-[89px]">
-            <nav class="navbar flex ">
-                <div class="logo">
+        class="main-container relative bg-whitesmoke-100 box-border w-full h-full overflow-hidden text-left text-xl text-gray-200 font-poppins border-[1px] border-solid border-gray-1300">
+        <header class="bg-gainsboro-200 w-full">
+            <nav class="navbar p-2">
+                <div>
                     <button
-                        class="cursor-pointer [border:none] p-5 bg-[transparent] flex flex-row items-center justify-start gap-[9.92px]">
-                        <img class="relative w-[23.5px] h-[29.76px] shrink-0" alt=""
-                            src="../Images/LogoHeader.png" /><img class="relative w-[136.58px] h-[25.95px] shrink-0"
+                        class=" logo cursor-pointer [border:none] bg-[transparent]">
+                        <img class="logo-img" alt=""
+                            src="../Images/LogoHeader.png" /><img class="logo-text"
                             alt="" src="../Images/Logotext.png" />
                     </button>
                 </div>
-                <a class="[text-decoration:none] flex gap-[2rem] p-5 h-7 text-sm text-[inherit]" target="_blank">
-                    <div class="left-[0px] w-[72px] h-6">
-                        <div class="capitalize font-medium">
+                <a class="[text-decoration:none]  flex items-center gap-[2rem] text-sm text-[inherit]" target="_blank">
+                    
+                        <div class="nav-links capitalize font-medium ">
                             products
                         </div>
-                    </div>
-                    <div class="capitalize font-medium">
+                    <div class="nav-links capitalize font-medium">
                         plans
                     </div>
-                    <div
-                        class="cursor-pointer [border:none] p-2 bg-[transparent] flex flex-row items-center justify-center">
-                        <div class="relative text-sm capitalize font-medium font-poppins text-gray-200 text-left">
-                            more
-                        </div>
-                        <img class="relative w-7 h-7 shrink-0 " alt="dropdown" src="../Images/dropdownIcon.png" />
+                    <div class="nav-links text-sm capitalize font-medium font-poppins text-gray-200  flex items-center cursor-pointer [border:none] bg-[transparent]">
+                        more <span class=""><img class="relative w-7 h-7 shrink-0 " alt="dropdown" src="../Images/dropdownIcon.png" /></span>
                     </div>
                 </a>
-                <div class="flex items-center gap-[2rem] pr-4 mr-4">
+                <div class="login">
                     <div class="text-sm font-medium text-black">
                         Login
                     </div>
@@ -79,90 +74,90 @@
             </nav>
         </header>
         <div class="hero-section">
-            <div class="text-[70px] leading-[92px] capitalize text-center inline-block ml-4 mr-4">
-                <span class="font-medium">medical software</span><span class="font-semibold"> </span><span
-                    class="font-medium">to attract and </span><b>retain patients</b>
+            <div class="banner-1 capitalize text-center">
+                <span class="banner-text1 font-medium">medical software</span><br><span class=" font-semibold"> </span><span
+                    class="font-medium txt">to attract and </span><br><b class="txt">retain patients</b>
             </div>
-            <div class="subtitle leading-[32px] font-medium text-gray-300 text-center ">
+            <div class="banner-text2 leading-[32px] font-medium text-gray-300 text-center ">
                 Patientgrid's communication platform helps improve patient experience
                 while staff hours.
             </div>
-            <div class="text-center flex items-center font-medium gap-2 justify-center">
+            <div class="btn1 text-center flex items-center font-medium gap-2 justify-center">
                 <span>Start For Free</span><img src="../Images/GoIcon.png" alt="">
             </div>
         </div>
-        <div class="relative h-[750px]">
-            <div class="absolute top-[0px] z-2 rounded-xxl w-[110%] h-[538px] transform rotate-[7.43deg] origin-top-left"
+        <div class="banner-2">
+            <div class="gradient z-2 rounded-xxl transform rotate-[7.43deg] origin-top-left"
                 style="background: linear-gradient(90.51deg, #87cefa, #2a0896); animation: gradientAnimation 5s ease-in infinite; transition: background-color 5s;">
             </div>
             <div class="flex justify-center">
-                <img class="absolute top-[80px] z-6" src="../Images/Card1.png" alt="Img...">
-            </div>
-        </div>
-        <div class="card">
-            <img src="../Images/C1.png" alt="..loading">
-            <div>
-                <p class="font-medium text-[32px]">Bring new business in by getting more online reviews.</p>
-                <p class="font-medium text-[22px] text-gray-1200 pr-[100px]" >94% Use review to choose new doctor.</p>
+                <img class="absolute z-6" src="../Images/Card1.png" alt="Img...">
             </div>
         </div>
         <div class="card">
             <div>
-                <p class="font-medium text-[32px]">Save time with collaborative tools and automations.</p>
-                <p class="font-medium text-[22px] text-gray-1200">15+ Staff hours saved per week.</p>
+                <p class="font-medium card-title">Bring new business in by getting more online reviews.</p>
+                <p class="font-medium text-gray-1200 card-subtitle " >94% Use review to choose new doctor.</p>
+            </div>
+            <img  src="../Images/C1.png" alt="..loading">
+        </div>
+        <div class="card  mid">
+            <div>
+                <p class="card-title font-medium">Save time with collaborative tools and automations.</p>
+                <p class="card-subtitle font-medium text-gray-1200">15+ Staff hours saved per week.</p>
             </div>
             <img src="../Images/C2.png" alt="..loading">
             
         </div>
         <div class="card">
-            <img src="../Images/C3.png" alt="..loading">
             <div>
-                <p class="font-medium text-[32px]">Improve patient experience engaging the way they want.</p>
-                <p class="font-medium text-[22px] text-gray-1200 pr-[80px]">90% People prefer texts to phone calls.</p>
+                <p class="font-medium card-title">Improve patient experience engaging the way they want.</p>
+                <p class="font-medium text-gray-1200 card-subtitle ">90% People prefer texts to phone calls.</p>
             </div>
+            <img src="../Images/C3.png" alt="..loading">
         </div>
-        <div class="collaboration flex items-center justify-center mt-6">
-             <div class="w-[1160px] bg-[#DDE9FF] rounded-xxl h-[581px] flex flex-row items-center justify-center pl-4">
-                <div>
-                    <p class="font-semibold text-[40px]">Seamless collaboration for healthcare teams</p>
-                    <p class=" text-[18px] text-gray-1200 pt-4 pr-[100px] ">With shared inboxes, any team member can resolve the team's pending tasks. Individual staff member don't get overwhelmed and patients are always take care of.</p>
+        <div class="collaboration">
+             <div class="banner-3 w-full bg-[#DDE9FF] rounded-xxl h-full">
+                <div class="banner-text">
+                    <p class="title font-semibold">Seamless collaboration for healthcare teams</p>
+                    <p class="sub-title text-center text-gray-1200 ">With shared inboxes, any team member can resolve the team's pending tasks. Individual staff member don't get overwhelmed and patients are always take care of.</p>
                 </div>
                 <img src="../Images/Card2.png" alt="">
              </div>
         </div>
-        <div class="relative w-[100%] flex justify-center items-center h-[400px] pt-[50px] mt-[50px]">
-            <img class="absolute z-2"
+        <div class="banner-4 ">
+            <img class="banner-img absolute z-2"
             src="../Images/Card3.png" alt="">
-            <p class="absolute z-10 w-[60%] pb-[100px] pl-[20%] font-semibold text-[40px] text-center">We work on a month-to-month basis, try for free with no commitments</p>
-            <p class="absolute z-10 pt-[150px] w-[60%] pl-[20%] text-[18px] text-gray-1200">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <p class="absolute z-10 bottom-0 ml-[20%] p-2 w-[173px] h[50px] bg-[#4482C2] rounded-xxl text-center text-[#fff]">14 Free Trail</p>
-
+            <p class="heading absolute z-10 font-semibold text-center">We work on a month-to-month basis, try for free with no commitments</p>
+            <p class="desc absolute z-10 text-gray-1200">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class=" btn absolute z-10 h[50px] bg-[#4482C2] rounded-xxl text-center text-[#fff]">14 Free Trail</p>
         </div>
-        <footer class="footer">
-           <div class="w-[100%] mt-[100px] bg-[#2A0896] text-white text-[18px]">
-             <div class="flex pt-[50px] pl-[150px] pr-[100px]">
-                <div class="p-5 w-[33%] ">
-                    <img class="h-[46px] mt-3" src="../Images/Footer Logo.png" alt="" srcset="">
-                    <p class="mt-3 pr-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                    <p class="mt-3"><img src="../Images/facebook.png" alt="">
+        <footer class="w-full h-full">
+           <div class="footer bg-[#2A0896] text-white">
+             <div class="footer-links">
+                <div class="first">
+                    <img class="footer-logo" src="../Images/Footer Logo.png" alt="" srcset="">
+                    <p class="footer-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    <p class="social-icons">
+                        <img src="../Images/facebook.png" alt="">
                         <img src="../Images/twitter.png" alt="">
                         <img src="../Images/instagram.png" alt="">
                     </p>
                 </div>
-                <div class="p-5 w-[33%]">
+                <div class="second">
                     <p class="mt-5"><img class="mr-2"  src="../Images/phone.png" alt="" srcset=""><span>+91-8853923455</span></p>
                     <p class="mt-5"><img class="mr-2" src="../Images/whatapp.png" alt="" srcset=""><span>+91-4567895478</span></p>
-                    <p class="mt-5"><img class="mr-2" src="../Images/email.png" alt="" srcset=""><span>patientgrid@gmail.com</span></p>
+                    <p class="mt-5"><img class="mr-2"  src="../Images/email.png" alt="" srcset=""><span>patientgrid@gmail.com</span></p>
                 </div >
-                <div class=" p-5 mt-4 w-[33%]">
-                    <p class="font-medium text-[20px] mb-3">Subscribe Newsletter</p>
-                    <p><img src="../Images/EmailIcon.png" alt=""></p>
+                <div class="third">
+                    <p class="font-medium text-[20px]">Subscribe Newsletter</p>
+                    <p><img class="email-img" src="../Images/EmailIcon.png" alt=""></p>
                 </div>
              </div>
              <hr/>
-             <div class="flex gap-[20px] justify-center mb-3 mt-3"><p>Products</p><p>Plan</p><p>More</p></div>
+             <div class="sub flex gap-[20px] justify-center"><p>Products</p>|<p>Plan</p>|<p>More</p></div>
              <hr/>
-             <p class="pb-3 mt-3 text-center"><img src="../Images/copyright.png" alt=""> Copyright 2023.All Rights Reserved.</p>
+             <p class="sub text-center"><img src="../Images/copyright.png" alt=""> Copyright 2023.All Rights Reserved.</p>
            </div>
         </footer>
     </div>
